--- a/config/storage.yml
+++ b/config/storage.yml
@@ -14,6 +14,13 @@ local:
 #   region: us-east-1
 #   bucket: your_own_bucket-<%= Rails.env %>
 
+amazon:
+    service: S3
+    access_key_id: <%= ENV['aws_access_key_id'] %>
+    secret_access_key: <%= ENV['aws_secret_access_key'] %>
+    region: <%= ENV['aws_bucket_region'] %>
+    bucket: <%= ENV['aws_bucket_name'] %>
+
 # Remember not to checkin your GCS keyfile to a repository
 # google:
 #   service: GCS
