--- a/config/application.yml
+++ b/config/application.yml
@@ -9,3 +9,7 @@
 # production:
 #   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
+aws_access_key_id: AKIA2Q42ESZVLXL3I6VC
+aws_secret_access_key: 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
+aws_bucket_name: mascot-tinder
+aws_bucket_region: us-east-1
