Se agregan métodos al application_controller, se agregan gemas y se agregan datos de user por medio del seed haciendo uso de faker.

--- a/test/fixtures/joboffers.yml
+++ b/test/fixtures/joboffers.yml
@@ -1,4 +1,16 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: joboffers
+#
+#  id          :bigint           not null, primary key
+#  position    :string
+#  description :string
+#  departament :string
+#  when_went   :datetime
+#  user_id     :bigint
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#
 
 one:
   position: MyString
