--- a/test/fixtures/images.yml
+++ b/test/fixtures/images.yml
@@ -1,4 +1,15 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: images
+#
+#  id             :bigint           not null, primary key
+#  url            :text
+#  context        :string
+#  imageable_type :string
+#  imageable_id   :bigint
+#  created_at     :datetime         not null
+#  updated_at     :datetime         not null
+#
 
 one:
   url: MyText
